--- a/app/src/Components/MessageSection.css
+++ b/app/src/Components/MessageSection.css
@@ -1,12 +1,14 @@
-#message-section {
-    height: 100vh;
-    width: 65%;
-    background: linear-gradient(to bottom right, rgb(40, 40, 40), rgb(15, 15, 15));
+.message-banner {
     display: flex;
-    flex-direction: column;
+    color: white;
+    align-items: center;
+    justify-content: center;
+    height: 9%;
+    background: rgba(0, 0, 0, 0.2);
+    backdrop-filter: blur(10px);
 }
 .messages-wrapper {
-    height: 91%;
+    height: 82%;
     display: flex;
     flex-direction: column;
     gap: .75rem;
