--- a/app/src/Components/Contact.css
+++ b/app/src/Components/Contact.css
@@ -1,10 +1,10 @@
 .contact {
     width: 100%;
-    display: flex;
+    /* display: flex; */
     align-items: center;
-    /* display: grid;
+    display: grid;
     grid-template-columns: 15% 85%;
-    grid-auto-flow: column; */
+    grid-auto-flow: column;
     gap: 1rem;
     padding: .8rem 2rem .8rem 1rem;
     color: white;
@@ -36,6 +36,7 @@
 .profile-picture {
     width: 100%;
     height: 100%; 
+    object-fit: cover;
     transition: .2s;
 }
 .user-name-and-message {
