--- a/app/src/Components/MessageSection.css
+++ b/app/src/Components/MessageSection.css
@@ -37,33 +37,18 @@
 }
 .incoming-message {
     justify-content: flex-start;
-    /* animation: slide-from-right .3s linear 1 forwards; */
 }
 .outgoing-message {
     justify-content: flex-end;
-    /* animation: slide-from-left .3s linear 1 forwards; */
 }
-/* @keyframes slide-from-right {
-    from {
-        opacity: 0;
-        translate: -20% 30%;
-    }
-}
-@keyframes slide-from-left {
-    from {
-        opacity: 0;
-        translate: 20% 30%;
-    }
-} */
 .content {
     color: white;
     padding: .4rem .6rem .2rem;
-    /* background: linear-gradient(to top left, rgb(135, 0, 135), rgb(102, 0, 102)); */
-    /* background-image: linear-gradient(to top right, rgb(33, 0, 180), rgba(182, 0, 233, 0.8)); */
     max-width: 55%;
     position: relative;
     overflow-wrap: break-word;
     overflow: hidden;
+    border-radius: .8rem;
     background: linear-gradient(rgba(0, 0, 0, 0.25), rgb(0, 0, 0, 0.25)) padding-box,
                 linear-gradient(to bottom left, rgb(34, 0, 255), rgb(144, 0, 255)) border-box;
     border: 2px solid transparent;
@@ -80,9 +65,6 @@
         translate: 0;
     }
 }
-/* .content:hover{
-    background: rgb(100, 34, 100);
-} */
 .content::after {
     content: '';
     position: absolute;
@@ -90,9 +72,7 @@
     height: 100%;
     top: 0;
     left: 0;
-    /* background: rgba(0, 225, 255, 0.3); */
     background: radial-gradient(circle at var(--mouse-x) var(--mouse-y), rgb(100, 34, 100, .4), rgb(100, 34, 100, .1));
-    /* clip-path: circle(0% at 100% 100%); */
     clip-path: circle(0% at var(--mouse-x) var(--mouse-y));
     transition: .3s;
 }
